<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PMB UNIPMA</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <!--play store-->
    <string name="appid">ca-app-pub-9400864410179150~6165476966</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="signup">
        <b>
            <u>Sign Up</u>
        </b>
    </string>
    <string name="message_empty_email">Please provide a non empty email!</string>
    <string name="message_invalid_email">Please provide a valid email!</string>
    <string name="message_empty_password">Please provide a non empty password!</string>
    <string name="message_empty_name">Please provide a non empty username!</string>
    <string name="action_home">Home</string>
    <string name="action_help">Help</string>
    <string name="action_info">Info</string>
    <string name="action_about">About</string>
    <string name="message_greet_login">PMB Online\nUniversitas PGRI Madiun
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="label_call_button">Call</string>
    <string name="dev">Dev</string>
    <string name="search_hint">Search Result</string>
    <string name="action_account">Account</string>
    <string name="action_contact">Contact Us</string>
    <string name="prestations">Prestations</string>
    <string name="message_retry">No result\nAny result will appear here</string>
    <string name="chart">Chart</string>
    <string name="track_distribution">Track &amp; Distribution</string>
    <string name="track">Track</string>
    <string name="information">Information</string>
    <string name="tracks">Pendaftar Per Jalur</string>
    <string name="announcement">Announcement</string>
    <string name="news">News</string>
    <string name="readmore">Read more</string>
    <string name="requirements">Requirements</string>
    <string name="program_study">Program Study</string>
    <string name="cost">Cost</string>
    <string name="terms">Terms</string>
    <string name="flow">Flow</string>
    <string name="top5">Universitas Persatuan Guru Republik Indonesia Madiun, Top 5 PTS di Jawa Timur</string>
    <string name="ktp_not_yet">Belum punya KTP?</string>
    <string name="ktp_sim_ortu">Jangan khawatir, Anda bisa menggunakan KTP atau SIM orang tua.</string>
    <string name="ktp_sim">Sebelum membayar biaya pendaftaran di BANK pastikan Anda membawa KTP atau SIM.</string>
    <string name="flow_1_title">Pay to BANK BRI</string>
    <string name="flow_1_desc">
        <p align="justify">Pay to bank bri Rp. 250,000, - anywhere only through TELLER by mentioning IKIP PGRI
            MADIUN Online SPMB / University PGRI Madiun / UNIPMA and submitting a KTP or SIM. Make sure the Student
            Candidates get the Username and Password on the proof of payment from TELLER.
        </p>
    </string>
    <string name="flow_2_title">Login &amp; Fill in All Form</string>
    <string name="flow_2_desc">
        <p align="justify">Login to the web or this application and fill in all form</p>
    </string>
    <string name="flow_3_title">Just Wait</string>
    <string name="flow_3_desc">
        <p align="justify">Wait for the Announcement of the Selection Results</p>
    </string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="wrong_auth">Wrong Authentication</string>
    <string name="text_edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_tos">Term of Service</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_rate_app">Rate Application</string>
    <string name="text_program_study">Program Study</string>
    <string name="text_choose_program_study">Choose Program Study</string>
    <string name="text_fill_bio">Fill in Biodata</string>
    <string name="text_fill_grade">Fill in Grade</string>
    <string name="text_choose_track">Choose Track</string>
    <string name="label_mail_button">Mail</string>
    <string name="unipma_email">rektorat@unipma.ac.id</string>
    <string name="related_post">Related News</string>
    <string name="title_source_url_article">Source</string>
    <string name="share">Share</string>
    <string name="news_detail">News Detail</string>
    <string name="total_cost_">Total Costs = </string>
    <string name="calculate_total_cost">Calculate Total Costs</string>
    <string name="formula_total_cost">Total Costs = (Biaya Semester) + (BPI sesuai Gelombang) + (PKKMB / Ospek)</string>
    <string name="cost_desc">
        - Kelas reguler sore ditambah biaya Rp. 750.000/Semester\n
        - Mahasiswa yang menempuh semester 9 dan seterusnya dikenakan 50% dari biaya semester\n
        - Biaya semester termasuk (SKS,SPP,Hereg,Penunjang,PPL,KKN,Skripsi,Ujian Skripsi,Praktikum)
    </string>
    <string-array name="languages">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
</resources>
