<?xml version="1.0" encoding="utf-8"?>
<menu
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:title="@string/action_home"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_home"
            android:enabled="true">
    </item>
    <item
            android:id="@+id/action_info"
            android:icon="@drawable/ic_info"
            android:title="@string/action_info"
            app:showAsAction="ifRoom"
            android:enabled="true">
    </item>
    <item
            android:id="@+id/action_account"
            android:title="@string/action_account"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_user"
            android:enabled="true">
    </item>
    <item
            android:id="@+id/action_contact"
            android:title="@string/action_contact"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_phone"
            android:enabled="true">
    </item>

</menu>