<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:paddingBottom="64dp"
            android:background="@drawable/rounded_up_corner_bg"
            android:fitsSystemWindows="true" android:layout_width="match_parent"
            android:paddingLeft="24dp"
            android:layout_height="wrap_content" android:paddingStart="24dp"
            android:paddingEnd="15dp"
            android:layout_alignParentLeft="true"
            android:paddingRight="15dp" android:layout_alignParentStart="true">
        <View android:layout_gravity="center_horizontal" android:id="@+id/badgeScroll"
              android:background="@drawable/bg_gray_swiper" android:layout_width="48dp"
              android:layout_height="8dp" android:layout_marginTop="6dp"
              android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="6dp" app:layout_constraintTop_toBottomOf="@+id/badgeScroll"
                    android:id="@+id/scrollView2" >
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content">
                <ImageView
                        android:background="@color/colorAccent"
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bri"
                        android:layout_marginTop="18dp"
                        app:layout_constraintTop_toTopOf="parent" tools:ignore="MissingPrefix"/>
                <TextView android:textSize="18sp"
                          android:text="@string/information"
                          android:textColor="@color/black"
                          android:id="@+id/tvInstructionBody"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          fontPath="fonts/ride_rewrite_neo_sans_medium.ttf"
                          android:layout_marginTop="16dp"
                          android:lineSpacingExtra="8sp"
                          app:layout_constraintTop_toBottomOf="@+id/image" tools:ignore="MissingPrefix"/>

                <TextView android:textSize="12sp"
                          android:textColor="@color/black"
                          android:id="@+id/tvDescription"
                          android:text="@string/cost_desc"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="8dp"
                          app:layout_constraintTop_toBottomOf="@+id/tvInstructionBody"/>

                <LinearLayout
                        android:id="@+id/rel"
                        android:gravity="center_vertical"
                        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                        android:orientation="vertical" android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView android:textSize="18sp"
                              android:text="@string/calculate_total_cost"
                              fontPath="fonts/ride_rewrite_neo_sans_medium.ttf"
                              android:textColor="@color/black"
                              android:gravity="center_vertical"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="16dp" tools:ignore="MissingPrefix"/>

                    <TextView android:textSize="12sp"
                              android:id="@+id/price"
                              android:layout_marginTop="@dimen/padding_8dp"
                              android:text="@string/formula_total_cost"
                              fontPath="fonts/ride_rewrite_neo_sans_medium.ttf"
                              android:gravity="center_vertical"
                              android:textColor="@color/black"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content" tools:ignore="MissingPrefix"/>
                </LinearLayout>

                <Button android:textSize="18sp"
                        android:textColor="@color/white"
                        android:id="@+id/btnDialog"
                        android:text="OK"
                        app:layout_constraintTop_toBottomOf="@+id/rel"
                        android:layout_width="match_parent"
                        android:background="@drawable/btnblue"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8sp"
                        android:layout_marginTop="@dimen/padding_16dp"
                        app:layout_goneMarginTop="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>