<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:drawableLeft="@drawable/ic_inform"
            android:padding="@dimen/padding_16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_4dp"
            android:text="@string/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:drawableLeft="@drawable/ic_bubble_chart"
            android:padding="@dimen/padding_16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_4dp"
            android:text="@string/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/a"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/white"
                app:layout_constraintBaseline_toBaselineOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_6dp"
                android:weightSum="1" tools:layout_editor_absoluteX="0dp">


            <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        fontPath="fonts/neo-sans-light.ttf"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:drawableLeft="@drawable/ic_line_chart"
                        android:text="@string/track"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/padding_8dp"
                        android:paddingTop="@dimen/padding_6dp"
                        android:paddingLeft="@dimen/padding_2dp"
                        android:paddingBottom="@dimen/padding_8dp"
                        android:paddingRight="@dimen/padding_2dp"
                        android:maxLines="1"
                        android:drawablePadding="@dimen/padding_8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingPrefix"/>


            </LinearLayout>
            <View android:layout_marginTop="@dimen/padding_4dp" android:layout_marginLeft="32dp" app:layout_constraintBottom_toTopOf="parent" android:background="@color/dark_gray"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"/>
        </LinearLayout>

        <LinearLayout
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/white"
                app:layout_constraintBaseline_toBaselineOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_6dp"
                android:weightSum="1" tools:layout_editor_absoluteX="0dp">


            <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        fontPath="fonts/neo-sans-light.ttf"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:layout_marginLeft="@dimen/padding_8dp"
                        android:drawablePadding="@dimen/padding_8dp"
                        android:drawableLeft="@drawable/ic_circle_chart"
                        android:text="@string/distribution"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/padding_6dp"
                        android:paddingLeft="@dimen/padding_2dp"
                        android:paddingBottom="@dimen/padding_8dp"
                        android:paddingRight="@dimen/padding_2dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingPrefix"/>


            </LinearLayout>
            <View android:layout_marginTop="@dimen/padding_4dp" android:layout_marginLeft="32dp" app:layout_constraintBottom_toTopOf="parent" android:background="@color/dark_gray"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
